--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/main.min.css">
+
 </head>
 
 <body class="page">
@@ -397,7 +395,7 @@
                     <p class="title-subsc">Підпишіться на розсилку</p>
                     <div class="box-subsc">
                         <input class="input-subsc" type="email" name="email" id="" placeholder="E-mail">
-                        <button type="button" class="button-subsc">
+                        <button class="button-subsc" type="button">
                             <p class="button-subsc-title">Підписатися</p>
                             <svg class="button-subsc-svg">
                                 <use href="./images/icons.svg#icon-send"></use>
